--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
         </footer>
     </div>
 
+    <script src="assets/js/ai.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
