Add Prompts section as separate tab with AI tools and guide download

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <button class="nav-tab" data-tab="studio">
                 <i class="fas fa-wand-magic-sparkles"></i> Studio sáng tạo
             </button>
+            <button class="nav-tab" data-tab="prompts">
+                <i class="fas fa-book"></i> Prompts
+            </button>
         </nav>
 
         <!-- Main Content -->
@@ -568,6 +571,56 @@
                             <h4>Tóm tắt tranh biện:</h4>
                             <div id="summary-content"></div>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Prompts Section -->
+            <section id="prompts" class="content-section">
+                <div class="section-header">
+                    <h2><i class="fas fa-book"></i> Hướng dẫn AI Prompts</h2>
+                    <p>Bộ prompts và hướng dẫn sử dụng AI cho dự án – từ ý tưởng đến triển khai.</p>
+                </div>
+
+                <div class="prompts-grid">
+                    <div class="prompt-card">
+                        <div class="prompt-icon" style="--bg:#e0f2fe; --fg:#0284c7;">
+                            <i class="fas fa-robot"></i>
+                        </div>
+                        <h3>ChatGPT</h3>
+                        <p>Hỗ trợ nghiên cứu triết học và tạo nội dung blog chất lượng cao.</p>
+                    </div>
+                    <div class="prompt-card">
+                        <div class="prompt-icon" style="--bg:#ede9fe; --fg:#6d28d9;">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <h3>Cursor</h3>
+                        <p>Công cụ coding AI giúp phát triển trang web học thuật hiện đại và tối ưu.</p>
+                    </div>
+                    <div class="prompt-card">
+                        <div class="prompt-icon" style="--bg:#fee2e2; --fg:#dc2626;">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>Lovart</h3>
+                        <p>Tạo hình ảnh AI minh họa cho các bài viết và poster chủ đề Mác–Lênin.</p>
+                    </div>
+                </div>
+
+                <div class="guide-box">
+                    <h3><i class="fas fa-book-open"></i> Hướng Dẫn AI Prompts</h3>
+                    <p>Bộ hướng dẫn chi tiết về cách sử dụng AI để phát triển dự án học thuật. Bao gồm tất cả prompts cần thiết và template câu trả lời.</p>
+                    <div class="guide-stats">
+                        <span><i class="fas fa-layer-group"></i> 15 Sections</span>
+                        <span><i class="fas fa-code"></i> 148 Dòng Code</span>
+                        <span><i class="fas fa-markdown"></i> Markdown</span>
+                    </div>
+                    <div class="guide-actions">
+                        <a class="btn primary" href="PROMPT_AI.md" target="_blank" rel="noopener">
+                            <i class="fas fa-download"></i> Tải Hướng Dẫn
+                        </a>
+                        <a class="btn" href="https://github.com/NKXTT1504/MLN122/blob/main/PROMPT_AI.md" target="_blank" rel="noopener">
+                            <i class="fab fa-github"></i> Xem trên GitHub
+                        </a>
                     </div>
                 </div>
             </section>
