--- a/index.html
+++ b/index.html
@@ -679,6 +679,7 @@
 
     <script src="assets/js/ai.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 </html>
 
