--- a/index.html
+++ b/index.html
@@ -395,16 +395,18 @@
                         <div class="message ai-message">
                             <div class="message-content">
                                 <i class="fas fa-robot"></i>
-                                <p>Xin chào! Tôi là AI trợ lý chuyên về Kinh tế Chính trị Mác-Lênin. Bạn có thể hỏi tôi về:</p>
-                                <ul>
-                                    <li>Lý thuyết cạnh tranh và độc quyền</li>
-                                    <li>Phân tích các tập đoàn lớn</li>
-                                    <li>Tác động đến doanh nghiệp nhỏ</li>
-                                    <li>Đề xuất hành động cho sinh viên</li>
-                                </ul>
+                                <div class="message-text"> <p>Xin chào! Tôi là Trợ lý AI chuyên sâu về Kinh tế Chính trị Mác-Lênin. Tôi ở đây để giúp bạn khám phá các chủ đề phức tạp.</p>
+                                    <p>Hãy thử hỏi tôi về:</p>
+                                    <ul>
+                                        <li>Bản chất của <strong>cạnh tranh độc quyền</strong>.</li>
+                                        <li>Phân tích thực tiễn <strong>các tập đoàn lớn</strong>.</li>
+                                        <li><strong>Tác động</strong> của độc quyền đến doanh nghiệp nhỏ.</li>
+                                        <li><strong>Giải pháp & hành động</strong> cho sinh viên.</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                        </div>
                     
                     <div class="chat-input-container">
                         <input type="text" id="chat-input" placeholder="Nhập câu hỏi của bạn..." />
@@ -679,6 +681,7 @@
 
     <script src="assets/js/ai.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 </html>
 
